--- a/sample_document.yml
+++ b/sample_document.yml
@@ -1,8 +1,9 @@
----
-
 root:
-    'xxxx'
+    'https://hopeful-neumann-0edaf5.netlify.app'
 
 images: !!omap
-- x: Mark McGwire
-- y: Sammy Sosa
+    - IMG_3305.JPG: "aa"
+    - IMG_3348.JPG: "bb"
+    - IMG_3354.JPG: "cc"
+    - IMG_3372.JPG: "dd"
+    - IMG_3380.JPG: "ee"
