got reading of yaml file working, inserting of slides working

--- a/typescript/makefile
+++ b/typescript/makefile
@@ -1,4 +1,4 @@
-SOURCES= slideshow.ts 
+SOURCES= slidelist.ts 
 BUILD_DIR=js
 ASSETS_DIR=../assets/js
 JS=$(addprefix $(BUILD_DIR)/, $(SOURCES:.ts=.js))
