--- a/typescript/makefile
+++ b/typescript/makefile
@@ -1,4 +1,4 @@
-SOURCES= slidelist.ts 
+SOURCES=show.ts slidelist.ts 
 BUILD_DIR=js
 ASSETS_DIR=../assets/js
 JS=$(addprefix $(BUILD_DIR)/, $(SOURCES:.ts=.js))
