using haml for index

--- a/src/makefile
+++ b/src/makefile
@@ -1,15 +1,17 @@
 PUBLISH=../_site
 
 TS_INPUTS=show.ts slidelist.ts swipe.ts
-NON_TS_INPUTS=index.html slideshow.css
+HAML_INPUTS=index.haml
+CP_INPUTS=slideshow.css
 
 JS_WORK_DIR=js
 JS_WORK=$(addprefix $(JS_WORK_DIR)/, $(TS_INPUTS:.ts=.js))
 
 JS_OUTPUT=$(addprefix $(PUBLISH)/, slideshow.js)
-NON_TS_OUTPUTS=$(addprefix $(PUBLISH)/, $(NON_TS_INPUTS))
+CP_OUTPUTS=$(addprefix $(PUBLISH)/, $(CP_INPUTS))
+HAML_OUTPUTS=$(addprefix $(PUBLISH)/, $(HAML_INPUTS:.haml=.html))
 
-OUTPUTS=$(JS_OUTPUT) $(NON_TS_OUTPUTS)
+OUTPUTS=$(JS_OUTPUT) $(HAML_OUTPUTS) $(CP_OUTPUTS)
 
 default: $(OUTPUTS)
 
@@ -19,6 +21,10 @@ $(JS_WORK_DIR)/%.js: %.ts
 $(JS_OUTPUT): $(JS_WORK)
 	mkdir -p $(PUBLISH)
 	browserify -e $^ > $@
+
+$(PUBLISH)/%.html: %.haml
+	mkdir -p $(PUBLISH)
+	haml $< > $@
 
 $(PUBLISH)/%: %
 	mkdir -p $(PUBLISH)
